--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-6 text-center">
-                    <img src="images/1.jpg" style="width:400px;height:500px;" class="img-thumbnail"/><br>
+                    <img src="1.jpg" style="width:400px;height:500px;" class="img-thumbnail"/><br>
                     <button class="btn btn-success" type="button">Like</button>
                 </div>
                 <div class="col-6 text-center">
-                    <img src="images/2.jpeg" style="width:400px;height:500px;" class="img-thumbnail"/><br>
+                    <img src="2.jpeg" style="width:400px;height:500px;" class="img-thumbnail"/><br>
                     <button class="btn btn-primary" type="button">Like</button>
                 </div>
             </div>
